Feature/ivyportal 20246 improve accessibility 12 (#3182)